Fix Overflow

--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -60,7 +60,6 @@ input, select {
   margin-top: 59px;
   max-width: 1200px;
   margin: auto;
-  overflow-x: hidden;
   @media (max-width: 1000px) {
     padding: 0 0px;
     margin-top: 50px;
@@ -581,6 +580,7 @@ input, select {
     .card{
       background: $primary-gradient;
       width: 60vw;
+      max-width: 600px;
       border-radius: 40px;
       height: 200px;
       display: flex;
@@ -1022,6 +1022,7 @@ input, select {
     transition: 1s ease-in-out;
     .cosede{
       width: calc(60vw - 80px);
+      max-width: 700px;
       padding: 0 40px;
       border: solid 2px $white;
       height: 160px;
